methode retirer equipage
