# src/routes/ship.routes.ts
@@ -16,6 +16,7 @@ export const shipRouter = (): Router => {
   router.post("/send/:recipient", authenticateAdmin, shipController.sendShip);
   router.post("/ajouterOr/:idBateau", authenticate, shipController.AjouterOr);
   router.post("/retirerOr/:idBateau", authenticate, shipController.retirerOr);
+  router.post("/retirerEquipage/:idBateau", authenticate, shipController.RetirerEquipage);
   return router;
 }
 
